# koba

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  tatus --short
.github/: pull_request_template.md
.github/workflows/: ci.yml  v-release.yml
assets/brand/: README.md
crates/koba/: Cargo.toml
crates/koba/src/: analysis.rs  changes.rs  cli.rs  commands.rs  config.rs  doctor.rs  executor.rs  git.rs  git_status.rs  github.rs  hooks.rs  init.rs  lib.rs  main.rs  output.rs  path_classification.rs  pr.rs  repo.rs  run_checks.rs  scan.rs  suggest_commit.rs
crates/koba/tests/: cli.rs
docs/: agents.md  architecture.md  distribution.md  product.md
examples/: koba.yml
packaging/scoop/: README.md
skills/koba/: SKILL.md
skills/koba/references/: workflows.md
