[workspace]
members = ["crates/koba"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/postigodev/koba"
homepage = "https://github.com/postigodev/koba"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
